# Hyperion

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.gradle.kts  eslint.config.mjs  package-lock.json  package.json  rust-toolchain.toml  settings.gradle.kts
.github/cross/: Dockerfile.riscv64-gnu
.github/workflows/: android-ci.yml  ci.yml  desktop-ci.yml  ios-signed-ci.yml  ios-simulator-ci.yml  mobile-ci.yml  release-aur.yml  release-build.yml  release-debian.yml  release-fedora.yml  release.yml
androidApp/: build.gradle.kts
composeApp/: build.gradle.kts  gradle.lockfile
composeApp/webpack.config.d/: node-polyfills.js
docs/: CNAME
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
kmpv2/: .gitignore  build.gradle.kts  gradle.properties
kmpv2/androidApp/: build.gradle.kts
kmpv2/composeApp/: Cargo.toml  build.gradle.kts
kmpv2/gradle/: libs.versions.toml
kmpv2/iosApp/Configuration/: Config.xcconfig
kmpv2/iosApp/iosApp.xcodeproj/: project.pbxproj
plugins/tauri-plugin-android-secure-storage/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-android-secure-storage/android/: build.gradle.kts
plugins/tauri-plugin-android-secure-storage/android/src/main/java/: AndroidSecureStoragePlugin.kt
plugins/tauri-plugin-android-secure-storage/permissions/: default.toml
plugins/tauri-plugin-android-secure-storage/permissions/autogenerated/: reference.md
plugins/tauri-plugin-android-secure-storage/permissions/schemas/: schema.json
plugins/tauri-plugin-android-secure-storage/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-mobile-webview-overlay/: Cargo.toml  README.md
plugins/tauri-plugin-mobile-webview-overlay/android/: build.gradle.kts
plugins/tauri-plugin-mobile-webview-overlay/ios/: README.md
plugins/tauri-plugin-mobile-webview-overlay/ios/Sources/: MobileWebviewOverlayPlugin.swift
plugins/tauri-plugin-mobile-webview-overlay/src/: desktop.rs  error.rs  lib.rs  mobile.rs
scripts/: generate-android-env.ps1  generate-android-env.sh
src/: App.css  App.tsx  lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/ios/: Package.swift
src-tauri/ios/Sources/: MobileOverlayWebViewPlugin.swift
src-tauri/src/: lib.rs  main.rs  mobile_custom_tabs.rs  mobile_overlay_webview.rs  secure_storage.rs
src-tauri/src/account/: manager.rs  mod.rs  secure_storage.rs  types.rs
src-tauri/src/settings/: mod.rs  theme.rs
src-tauri/src/settings/encryption/: commands.rs  mod.rs  types.rs
src-tauri/src/shell/: engine.rs  mod.rs  service.rs  sync.rs  types.rs
src-tauri/src/shell/service/: paging.rs  read_state.rs  room.rs  room_list.rs  search.rs  timeline.rs
src-tauri/src/shell/sync/: runtime.rs
src/account/: mod.rs  types.rs
src/components/ui/: AppRail.tsx  BackButton.tsx  Button.tsx  EmptyState.tsx  FeedbackMessage.tsx  Panel.tsx  Pill.tsx  Screen.tsx  TextField.tsx  Toggle.tsx  ToolbarField.tsx  Typography.tsx  classNames.ts  index.ts  ui.css
src/config/: defaultDesktopUserAgent.ts  defaultDesktopUserAgent.txt
src/context/: ThemeContext.tsx
src/hooks/: useColorScheme.ts
src/screens/Log-in/: LogInScreen.css  LogInScreen.tsx  index.ts
src/screens/Settings/: Account.tsx  Appearance.tsx  Calls.tsx  Chats.tsx  Encryption.tsx  HelpAbout.tsx  Hotkeys.tsx  Notifications.tsx  PlaceholderSection.tsx  Security.tsx  Sessions.tsx  SettingsView.css  SettingsView.tsx  index.ts  settingsSections.ts
src/screens/app-shell/: AppShell.css  AppShell.tsx  AppShellAccountPopoverContent.tsx  AppShellMessagesView.tsx  AppShellNavigation.tsx  AppShellSearchOverlay.tsx  AppShellSettingsView.tsx  AppShellSpacesView.tsx  appShellAdapters.ts  index.ts  useAppShellState.ts
src/themes/: colorpalette.ts  elevation.ts  layout.ts  motion.ts  primitives.ts  shape.ts  sizing.ts  spacing.ts  theme.ts  typography.ts
tauri-plugin-mobile-webview-overlay/: build.rs
tauri-plugin-mobile-webview-overlay/ios/: Package.swift
tauri-plugin-mobile-webview-overlay/permissions/: default.toml
tauri-plugin-mobile-webview-overlay/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+122 files in other folders)
