[workspace]
members = [
    "src-tauri", 
    "plugins/tauri-plugin-mobile-webview-overlay",
    "plugins/tauri-plugin-android-secure-storage"
    ]
resolver = "3"

[workspace.dependencies]
tauri-plugin-mobile-webview-overlay = { path = "plugins/tauri-plugin-mobile-webview-overlay" }
tauri-plugin-android-secure-storage = { path = "plugins/tauri-plugin-android-secure-storage" }
