[package]
name = "hyperion"
version = "0.1.0"
description = "A multiplatform Matrix client"
authors = ["VinVel"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-mobile-webview-overlay = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-i18n = "2.0.2"
rust-i18n = "3.1.5"

[dependencies.matrix-sdk]
version = "0.16.0"
default-features = false
features = [
    "e2e-encryption", 
    "automatic-room-key-forwarding", 
    "bundled-sqlite", 
    "rustls-tls"
]

[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "crypto-rust"
] }
