[package]
name = "tauri-plugin-android-secure-storage"
version = "0.1.0"
authors = [ "VinVel" ]
description = ""
edition = "2024"
rust-version = "1.85.0"
build = "build.rs"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-android-secure-storage"

[dependencies]
tauri = { version = "2.10.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }
