[package]
name = "tauri-plugin-mobile-webview-overlay"
version = "0.1.0"
authors = [ "VinVel" ]
description = ""
edition = "2024"
rust-version = "1.85.0"
build = "build.rs"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mobile-webview-overlay"

[dependencies]
tauri = { version = "2.10.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2.10.3", default-features = false, features = ["wry"] }
